primitive term to primitive term added

--- a/DataCollector/src/main/resources/test_pubmed.htm
+++ b/DataCollector/src/main/resources/test_pubmed.htm
@@ -518,6 +518,8 @@ FAU - Pokushalov, E A
 AU  - Pokushalov EA
 FAU - Zakian, S M
 AU  - Zakian SM
+FAU - Bulygina, Veta V
+AU  - Bulygina VV
 LA  - eng
 PT  - Journal Article
 PL  - Russia (Federation)
@@ -582,6 +584,8 @@ PL  - England
 TA  - Cell Biol Int
 JT  - Cell biology international
 JID - 9307129
+OT  - OXYS rats
+OT  - RNA-Seq
 SB  - IM
 EDAT- 2013/01/23 06:00
 MHDA- 2013/01/23 06:00
