--- a/DataCollector/src/main/resources/test_pubmed.htm
+++ b/DataCollector/src/main/resources/test_pubmed.htm
@@ -586,6 +586,7 @@ JT  - Cell biology international
 JID - 9307129
 OT  - OXYS rats
 OT  - RNA-Seq
+MH  - Test term
 SB  - IM
 EDAT- 2013/01/23 06:00
 MHDA- 2013/01/23 06:00
